--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,3 +4,7 @@ services:
     image: 'bitnami/nginx:1.16'
     ports:
       - '80:8080'
+    volumes:
+      - './nginx/nginx.conf:/etc/nginx/nginx.conf:ro'
+      - './nginx/nginx.d/:/etc/nginx/nginx.d/'
+      - './data/www/:/app/'
