--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,8 @@ services:
       - './nginx/nginx.conf:/etc/nginx/nginx.conf:ro'
       - './nginx/nginx.d/:/etc/nginx/nginx.d/'
       - './data/www/:/app/'
+
+  test-endpoint:
+    image: 'bitnami/nginx:1.16'
+    ports:
+      - '4001:8080'
