--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,15 @@ services:
     ports:
       - '80:8080'
     volumes:
-      - './nginx/nginx.conf:/etc/nginx/nginx.conf:ro'
-      - './nginx/nginx.d/:/etc/nginx/nginx.d/'
-      - './data/www/:/app/'
+      - './nginx/config/nginx.conf:/etc/nginx/nginx.conf:ro'
+      - './nginx/config/nginx.d/:/etc/nginx/nginx.d/'
+      - './nginx/data/www/:/app/'
 
   test-endpoint:
     image: 'bitnami/nginx:1.16'
     ports:
       - '4001:8080'
+    volumes:
+      - './test-endpoint/config/nginx.conf:/etc/nginx/nginx.conf:ro'
+      - './test-endpoint/config/nginx.d/:/etc/nginx/nginx.d/'
+      - './test-endpoint/data/www/:/app/'
